# crunchyroll-watch-list

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  history.rs  main.rs  models.rs
