[package]
name = "crunchyroll-watch-list"
version = "0.1.0"
edition = "2021"

[dependencies]
crunchyroll-rs = "0.12.1" 
tokio = { version = "1", features = ["full"] } 
reqwest = { version = "0.12.12", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] } 
dotenv = "0.15" 
chrono = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
