[package]
name = "crunchyroll-watch-list"
version = "0.1.0"
edition = "2021"

[dependencies]
crunchyroll-rs = "0.12.1" 
tokio = { version = "1", features = ["full"] } 
reqwest = { version = "0.12.12", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
dotenv = "0.15" 
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures-util = "0.3.31"
csv = "1.1.6"

